WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
289723
Synchronize BBQ->OMG's loop OSR stackmap size with IPInt->BBQ's stackmap size
https://bugs.webkit.org/show_bug.cgi?id=289723
Summary
Synchronize BBQ->OMG's loop OSR stackmap size with IPInt->BBQ's stackmap size
daniel_liu4
Reported
2025-03-13 11:44:39 PDT
The BBQ->OMG OSR stackmap calculations should match their size with the IPInt->BBQ stackmap's size to avoid assertion failures during OSR entry.
rdar://146072013
Attachments
Add attachment
proposed patch, testcase, etc.
daniel_liu4
Comment 1
2025-03-13 11:55:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/42415
EWS
Comment 2
2025-03-14 09:37:06 PDT
Committed
292167@main
(7ee1dc84cc95): <
https://commits.webkit.org/292167@main
> Reviewed commits have been landed. Closing PR #42415 and removing active labels.
daniel_liu4
Comment 3
2025-06-05 14:34:52 PDT
***
Bug 293911
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug