BBQ->OMG OSR should count try blocks when IPInt is enabled to synchronize counts https://bugs.webkit.org/show_bug.cgi?id=289723 rdar://146072013

Reviewed by Yusuke Suzuki.

During IPInt->BBQ OSR, we add slots in the stackmap for try blocks (289960@main).
However, we did not update the BBQ->OMG loop OSR buffer OSR. Since OMG only looks
at the exception value when a catch is hit, we don't need to

* Source/JavaScriptCore/wasm/WasmOMGIRGenerator.cpp:
(JSC::Wasm::OMGIRGenerator::addLoop):

Canonical link: https://commits.webkit.org/292167@main